--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ requires-python = ">=3.10"
 package-mode = false
 
 dependencies = [
-    "pandas (>=2.2.3,<3.0.0)",
-    "numpy (>=1.26,<2.0)",
+    "pandas (<2.2.3)",
+    "numpy (>=1.18.5,<1.26.0)",
     "torch (>=2.6.0,<3.0.0)",
     "transformers (>=4.51.3,<5.0.0)",
     "scikit-learn (>=1.6.1,<2.0.0)",
